--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&family=Quicksand:wght@300;500;700&family=Raleway:wght@700&family=Yellowtail&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&family=Mr+Dafoe&family=Quicksand:wght@300;500;700&family=Raleway:wght@700&family=Yellowtail&display=swap"
       rel="stylesheet"
     />
     <title>Visit West Sumatera</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="shared.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="pagehome">
+        <a
+          id="homenav"
+          href="index.html"
+          style="font-family: 'Mr Dafoe', cursive"
+          >Visit West Sumatera</a
+        >
+      </div>
+      <nav></nav>
+    </header>
+    <main>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
