--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>Visit West Sumatera</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="shared.css">
+    <link rel="stylesheet" href="shared.css" />
   </head>
   <body>
     <header>
@@ -22,11 +22,20 @@
           >Visit West Sumatera</a
         >
       </div>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li class="head"> <a href="destination.html">Destinations</a></li>
+          <li class="head"><a href="about.html">About</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
+      <section id="upper">
+        <h1>West Sumatera</h1>
+        <p>Feel The Nature of Minangkabau</p>
+        <a href="destination.html">Discover Places</a>
+      </section>
+      <section id="lower"></section>
     </main>
     <footer></footer>
   </body>
