upper section completed

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
       </div>
       <nav>
         <ul>
-          <li class="head"> <a href="destination.html">Destinations</a></li>
+          <li class="head"><a href="destination.html">Destinations</a></li>
           <li class="head"><a href="about.html">About</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="upper">
-        <h1>West Sumatera</h1>
-        <p>Feel The Nature of Minangkabau</p>
-        <a href="destination.html">Discover Places</a>
+        <div id="uppercontent">
+          <h1>West Sumatera</h1>
+          <p>Feel The Nature of Minangkabau</p>
+          <a href="destination.html">Discover Places</a>
+        </div>
       </section>
       <section id="lower"></section>
     </main>
