Error fix and header completion, also highlight creation

--- a/index.html
+++ b/index.html
@@ -15,17 +15,12 @@
   <body>
     <header>
       <div id="pagehome">
-        <a
-          id="homenav"
-          href="index.html"
-          style="font-family: 'Mr Dafoe', cursive"
-          >Visit West Sumatera</a
-        >
+        <a href="index.html">Visit West Sumatera</a>
       </div>
       <nav>
         <ul>
-          <li class="head"><a href="destination.html">Destinations</a></li>
-          <li class="head"><a href="about.html">About</a></li>
+          <li><a href="destination.html">Destinations</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </header>
@@ -37,7 +32,32 @@
           <a href="destination.html">Discover Places</a>
         </div>
       </section>
-      <section id="lower"></section>
+      <section id="lower">
+        <h2>Highlights</h2>
+        <ul id="destinate">
+          <li class="target">
+            <img
+              src="images/places/jamgadang.jpg"
+              alt="Jam Gadang on sunny day"
+            />
+            <p>Jam Gadang <strong>Bukittinggi</strong></p>
+          </li>
+          <li class="target">
+            <img
+              src="images/places/sajuta.jpeg"
+              alt="Sajuta Janjang dipagi hari"
+            />
+            <p>Sajuta Janjang <strong>Agam</strong></p>
+          </li>
+          <li class="target">
+            <img
+              src="images/places/marapi.jpg"
+              alt="Gunung Marapi disaat fajar"
+            />
+            <p>Gunung Marapi <strong>Agam</strong></p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
