--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="index.html">Visit West Sumatera</a>
       </div>
       <nav>
-        <ul>
+        <ul id="desta">
           <li><a href="destination.html">Destinations</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -28,7 +28,7 @@
       <section id="upper">
         <div id="uppercontent">
           <h1>West Sumatera</h1>
-          <p>Feel The Nature of Minangkabau</p>
+          <p>Explore West Sumatra Today</p>
           <a href="destination.html">Discover Places</a>
         </div>
       </section>
@@ -59,6 +59,31 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://m.facebook.com/aditya.bayhaqie.90?eav=AfawZKW6ayNWzPAmH4ZTW5SU-fg_-sUcYN85y_rAAiYRn5HhS7Czm-zi2xDjgM1vD_w&paipv=0"
+            ><img
+              src="/Info_Page_Website/images/icons/facebook.png"
+              alt="Facebook"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/bayhaqieee/"
+            ><img
+              src="/Info_Page_Website/images/icons/insta.png"
+              alt="Instagram"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/bayhaqieee/"
+            ><img
+              src="/Info_Page_Website/images/icons/linked.png"
+              alt="LinkedIn"
+          /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
