--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <title>Visit West Sumatera</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="shared.css" />
+    <link rel="icon" href="images/icons/icon48.ico" />
   </head>
   <body>
     <header>
       <div id="pagehome">
-        <a href="index.html">Visit West Sumatera</a>
+        <a href="index.html">Minangkabau</a>
       </div>
       <nav>
         <ul id="desta">
